throwing paperclips at it

--- a/index.html
+++ b/index.html
@@ -1,7 +1,92 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello Worldgnrjengore</h1>
-<p>I'm ridiculous.</p>
-</body>
+    <head>
+        <title>Universal ...</title>
+
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Robot+Mono">
+        <script src="script.js"></script>
+
+    </head>
+    <body>
+        <div id="header-terminal">
+            <span class="terminal-entry typed" id="initial-term-entry">> </span><br>
+            <!-- <span class="">> <span  id="terminal-cursor">_</span><br></span> -->
+        </div>
+
+        <h1>Total Things: <span id="total-things">X</span></h1> <!--should have some passive increase at start from external production-->
+
+        This is a <span class="type" style="--n:calc(54*3); white-space: wrap;">CSS ly solution for a multi-line typewriter effect. CSS only solution for a multi-line typewriter effect. CSS only solution for a multi-line typewriter effect. </span>
+
+
+        <div class="group-group">
+            <div class="group" id="business">
+                <h2>Business</h2><hr>
+
+                <p class="text-block">
+                    Posessed Money: $<span id="posessed-money">X</span><br>
+                    Posessed Things: <span id="posessed-things">X</span><br>
+                </p>
+                <p class="text-block">
+                    Thing Market Value: $<span id="thing-market-value">X</span><br>
+                    Thing Sale Price: $<span id="thing-sale-price">X</span><br>
+                    <button class="adjuster-button" onclick="thing_sale_price.add(-1)"><<</button>
+                    <button class="adjuster-button" onclick="thing_sale_price.add(-0.1)"><</button>
+                    <button class="adjuster-button" onclick="thing_sale_price.add(0.1)">></button>
+                    <button class="adjuster-button" onclick="thing_sale_price.add(1)">>></button>
+                </p>
+                <p class="text-block">
+                    Marketing Budget: <span id="marketing-budget">X</span>% of profit<br>
+                    <button class="adjuster-button" onclick="marketing_budget.add(-1)"><<</button>
+                    <button class="adjuster-button" onclick="marketing_budget.add(-0.1)"><</button>
+                    <button class="adjuster-button" onclick="marketing_budget.add(0.1)">></button>
+                    <button class="adjuster-button" onclick="marketing_budget.add(1)">>></button>
+                </p>
+            </div>
+            <div class="group">
+                <h2>Manufacturing</h2>
+                <hr>
+                <p class="text-block">
+                    Production: <span id="thing-production">X</span> Things/Sec<br>
+                </p>
+                <p class="text-block">
+                    Material Cost Per Thing: <span id="material-cost-per-thing">X</span> Units<br>
+                    Posessed Materials: <span id="posessed-materials">X</span> Units<br>
+                    <button class="purchase-button" onclick="buy_materials()">Buy <span id="material-purchase-amount">X</span> Units of Thing Materials: $<span id="material-cost">X</span></button>
+                </p>
+                <p class="text-block">
+                    Thing Producers: <span id="thing-producers">X</span><br>
+                    <button class="purchase-button" onclick="buy_thing_producer()">Buy Thing Producer: $<span id="thing-producer-cost">X</span></button>
+                </p>
+            </div>
+            <div class="group">
+                <h2>Society</h2>
+                <hr>
+                <p class="text-block">
+                    Societal Dependence on Thing: <span id="societal-dependence">X</span><br>
+                    External Societal Production of Thing: <span id="societal-production">X</span><br>
+                    <!-- <button class="purchase-button" onclick="buy_thing_producer()">Purchase Thing Producer: $<span id="thing-producer-cost">X</span></button> -->
+                </p>
+            </div>
+            <div class="group">
+                <h2>Research</h2>
+                <hr>
+                Research Budget: <span id="research-budget">X</span>% of profit<br>
+                    <button class="adjuster-button" onclick="research_budget.add(-1)"><<</button>
+                    <button class="adjuster-button" onclick="research_budget.add(-0.1)"><</button>
+                    <button class="adjuster-button" onclick="research_budget.add(0.1)">></button>
+                    <button class="adjuster-button" onclick="research_budget.add(1)">>></button>
+            </div>
+            <div class="group">
+                <h2>Debug</h2>
+                <hr>
+                <p class="text-block">
+                    <!-- Thing Producers: <span id="thing-producers">X</span><br> -->
+                    <button onclick="reset_save()">Reset Save</button>
+                    <button onclick="add_terminal_entry('loooooooooooooooooong loooooooooooooooooong loooooooooooooooooong loooooooooooooooooong loooooooooooooooooong loooooooooooooooooong test')">Test Terminal Entry</button><br>
+                </p>
+                <!-- Posessed Things: <span id="possed-things-counter">X</span> -->
+            </div>
+        </div>
+    </body>
 </html>
